2007-02-23  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Emit appropriate error message if it was
	impossible to determine the type of an assignment equation.
	If undefined dependencies are found in the equation checker
	process; now trying to resolve that dependencies in the
	component properties of the netlist.
	Fixed a segfault bug when trying to detect variable chain of
	an assigment which is actually not cyclic itself but involves
	a variable which is cyclic.

	* equation.h (class checker): Add a netlist entries to the
	equation checker.

	* environment.h (class environment): Add a netlist entries to
	an environment.

2007-02-22  Stefan Jahn  <stefan@lkcc.org>

	* environment.cpp: Fixed a bug which was due to the fact that
	different environments based on the same subcircuit share the
	same equation checker and solver.

2007-02-21  Stefan Jahn  <stefan@lkcc.org>

	* environment.cpp: Copy variable content if necessary.

	* check_netlist.cpp: Don't come across root components twice when
	expanding subcircuits.

2007-02-20  Stefan Jahn  <stefan@lkcc.org>

	* variable.h (class variable): Allowing variables to references
	as well.

	* variable.cpp (toString): New function which creates a textual
	representation of a variable.

	* property.cpp: Also allow properties which are references.

	* net.cpp: Start equation solver once before each top-level
	analysis.

	* input.cpp: Ensure that component properties (if variables) are
	referenced from the correct environment.

	* equation.cpp: Some more functionality especially for double
	values/assignments added.

	* environment.cpp: The equation solver now updates equation
	results and updates references across subcircuit boundaries.

	* check_netlist.cpp: Putting subcircuit variables into the
	appropriate environment.

2007-02-03  Stefan Jahn  <stefan@lkcc.org>

	* nasolver.cpp: Fixing probe functionality.

2007-01-30  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Updated copyright notice.
